--- a/house-price-prediction.ipynb
+++ b/house-price-prediction.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fa29a07a",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(42)\n",
-    "x = 2 * np.random.rand(100, 1)  # square footage\n",
-    "y = 4 + 3 * x + np.random.randn(100, 1)  # price = 4 + 3 * sqft + noise"
+    "x = 2 * np.random.rand(100, 1) \n",
+    "y = 4 + 3 * x + np.random.randn(100, 1) "
    ]
   },
   {
